FIX main content behind sidebar with padding

--- a/css/app.css
+++ b/css/app.css
@@ -75,11 +75,19 @@ a.btn.list-group-item:hover {
 }
 
 
-/* @media only screen and (min-width: 768px) {
-    section.bg-blue > .container {
-        width: calc(100% - 290px);
+ @media only screen and (min-width: 574px) {
+    main {
+       padding-left: 130px; /* PER NON FAR ANDARE I CONTENUTI DENTRO LA SIDEBAR */
+
     }
 
 }
- */
 
+@media only screen and (max-width: 573px) {
+    main {
+       padding-left: 66px; /* PER NON FAR ANDARE I CONTENUTI DENTRO LA SIDEBAR */
+
+    }
+
+}
+ 
